<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".wallet.AddMoneyToWalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_wallet"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_arrow"
                android:tint="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical">

            <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__add_money_wallet"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VIEW_WALLET_MONEY_ACTIVITY__current_balance"
                android:textColor="@color/colorWhite" />

            <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                android:id="@+id/text_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="28dp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__add_money_to_wallet"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__it_s_quick_safe_and_secure"
                    android:textColor="@color/pure_black"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <EditText
                                android:id="@+id/ed_enter_money"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@null"
                                android:hint="0"
                                android:inputType="numberDecimal"
                                android:textColor="@color/pure_black"
                                android:textColorHint="@color/icons_8_muted_grey" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/icons_8_muted_grey" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.7"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/am_first_txt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/primary_color_layout_border"
                            android:gravity="center"
                            android:text="100"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/am_second_txt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/primary_color_layout_border"
                            android:gravity="center"
                            android:text="200"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/am_third_txt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/primary_color_layout_border"
                            android:gravity="center"
                            android:text="300"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/txt_add_money"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/icons_8_muted_grey"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__add_money"
            android:textAllCaps="false"
            android:textColor="@color/pure_white" />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/primary_color_layout_border"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/edt_card_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@android:color/transparent"
                            android:inputType="number"
                            android:maxLength="23"
                            android:singleLine="true"
                            android:textColor="@color/icons_8_muted_grey"
                            android:textSize="14dp" />

                        <EditText
                            android:id="@+id/edt_expiry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@android:color/transparent"
                            android:hint="MM/YYYY"
                            android:inputType="number"
                            android:maxLength="7"
                            android:singleLine="true"
                            android:textColor="@color/icons_8_muted_grey"
                            android:textSize="14dp" />


                        <EditText
                            android:id="@+id/edt_cvv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@android:color/transparent"
                            android:hint="CVV"
                            android:inputType="number"
                            android:maxLength="3"
                            android:singleLine="true"
                            android:textColor="@color/icons_8_muted_grey"
                            android:textSize="15dp" />

                    </LinearLayout>


                </HorizontalScrollView>

                <TextView
                    android:id="@+id/done_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__done"
                    android:textColor="@color/pure_white" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_saved_cards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_light"
                android:orientation="vertical"
                android:visibility="gone">

                <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__select_a_card_to_proceed_with_payment"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/lv_cards"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:scrollbars="none" />

                    <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                        android:id="@+id/tv_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ADD_MONEY_TO_WALLET_ACTIVITY__no_card_added"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17dp"
                        geekui:customTypeface="OpenSans_Regular.ttf" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
